Fix alignment of h1.

--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ body {
   color: #444;
   font: normal 1em sans-serif;
 }
-p, .entry {
+h1, p, hr, .entry {
   margin: 24px;
 }
 .head {
@@ -53,8 +53,6 @@ hr {
   height: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  margin-left: 24px;
-  margin-right: 24px;
 }
 
 aside p, aside .entry button, aside .entry input {
